Docker compose.yaml fix
